# ifra

./: .gitattributes  .gitignore  MANIFEST.in  README.md  logging.json  main.py  make_data.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: pull-request.yml  push.yml
docs/: actor.html  aggregations.html  aggregator.html  central_server.html  configs.html  datapreps.html  decorator.html  diff_privacy.html  duplicated_rules_updater.html  fitters.html  index.html  loader.html  messenger.html  node.html  node_model_updaters.html  plot.html  setup_logger.html
ifra/: __init__.py  _version.py  actor.py  aggregations.py  aggregator.py  central_model_updaters.py  central_server.py  configs.py  datapreps.py  decorator.py  diff_privacy.py  duplicated_rules_updater.py  fitters.py  loader.py  messenger.py  node.py  node_model_updaters.py  plot.py  predictor.py  setup_logger.py  train_test_split.py  updaters.py
ifra_simulator/: __init__.py  central_server.py  node.py
infra/: __init__.py  central_server.py  node.py
infra_simulator/: central_server.py  node.py
tests/: __init__.py  conftest.py  not_test_real.py  test_iris.py  test_real.py  test_simulator.py
tests/alternates/: dataprep.py  fitter.py  updater.py
tests/data/: aggregator_configs.json  central_configs.json  learning.json  learning_real.json  learning_simulator.json  make_data.py  thresholds.json
tests/end2end/: test_with_iris.py
tests/outputs/: ruleset.csv  ruleset_0.csv  ruleset_1.csv  ruleset_2.csv
tests/unit/: test_aggregate.py  test_aggregator_and_nodegate.py  test_central.py  test_node.py  (+3 more)
(+210 files in other folders)
